# autotools-calculator

./: .gitignore  Makefile.am  configure.ac
src/calc/: Makefile.am  main.c
src/compute/: Makefile.am  compute.c
src/compute/include/: compute.h
src/include/: ast.h
src/include/compute/: compute.h
src/include/mmgr/: mempool.h
src/mmgr/: Makefile.am  mempool.c
src/parser/: Makefile.am  gram.y  main.c  parser.c  parsetree.c  scan.l
src/parser/include/: parser.h
src/reader/: Makefile.am  buffer.c
src/reader/include/: buffer.h
